--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     -->
   <title>ReelDB</title>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
 </head>
 
